--- a/views/login.jade
+++ b/views/login.jade
@@ -6,3 +6,4 @@ block content
         input(type="text" placeholder="username" name="username")
         input(type="password" Placeholder="password" name="password")
         button(type="submit") Login
+    a(href="/register") Not registered? Click here!
