Sessions optimized and Dashboard page working!

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-    h1 Welcome to your Dashboard, {user}!
+    h1 Welcome to your Dashboard, #{user.username}!
     
