Learn more about session tests & fix /users links

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     h1 Hi #{user.username}, welcome to your dashboard!
-    a(href="/newPost") Write New Blog Post
-    a(href="/logout") Logout
+    a(href="./newPost") Write New Blog Post
+    a(href="./logout") Logout
