--- a/views/newPost.jade
+++ b/views/newPost.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1 #{user.username}'s #{title}
-    form(action='/newPost' method='POST')
+    form(action='./newpost' method='POST')
         input(type="text" placeholder="Post title" name="title")
         input(type="text" placeholder="Post body" name="body")
         button(type="submit") Submit
