--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,7 @@ doctype html
 html
     head
         title= "TDD Blog - " + title
+        link(href="/stylesheets/bootstrap.css" rel="stylesheet")
     body
-        block content
+        .container-fluid
+            block content
