--- a/views/newPost.jade
+++ b/views/newPost.jade
@@ -7,7 +7,7 @@ block content
             .form-group
                 input.form-control(type="text" required="true" placeholder="Post title" name="title")
             .form-group
-                textarea.form-control(placeholder="Post body" name="body")
+                textarea.form-control(placeholder="Post body" required="true" name="body")
             .checkbox
                 label
                     input(type="checkbox" name="draft") 
