--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     head
         title= "TDD Blog - " + title
         link(href="/stylesheets/bootstrap.css" rel="stylesheet")
+        meta(name="viewport" content="width=device-width, initial-scale=1")
     body
         .container-fluid
             block content
