--- a/views/editPost.jade
+++ b/views/editPost.jade
@@ -1,17 +1,21 @@
 extends layout
 
 block content
-    .col-lg-4
+    .col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
         h1=title
         form(action="../edit/#{post.permalink}" method="POST")
             .form-group
                 input.form-control(type="text" required="true" placeholder="Post title" name="title" value="#{post.title}")
             .form-group
-                textarea.form-control(placeholder="Post body" required="true" name="body") #{post.body}
+                textarea.form-control(required="true" placeholder="Post body" name="body" rows="10") #{post.body}
             .checkbox
                 label
-                    input(type="checkbox" name="draft") 
+                    if post.draft
+                        input(type="checkbox" name="draft" checked="true")
+                    else
+                        input(type="checkbox" name="draft")
                     span Save as Draft
-            button.btn(type="submit") Submit
+            a.btn.btn-danger.btn-lg(href="/users/dashboard") Cancel
+            button.btn.btn-primary.btn-lg.pull-right(type="submit" style="margin-right:5px") Submit
 script(type='text/javascript' src='/javascripts/jquery.js')
 script(type='text/javascript' src='/javascripts/newPost.js')
