--- a/views/login.jade
+++ b/views/login.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-    .col-lg-4
+    col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
         h1= title
         form(action="/users/login" method="POST")
             .form-group
                 input.form-control(type="text" placeholder="username" required="true" name="username")
             .form-group
                 input.form-control(type="password" Placeholder="password" required="true" name="password")
-            button.btn(type="submit") Login
+            button.btn.btn-primary.btn-lg.pull-right(type="submit") Login
         a(href="./register") Not registered? Click here!
