--- a/views/register.jade
+++ b/views/register.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    .col-lg-4
+    .col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
         h1= title
         form(action="/users/register" method="POST")
             .form-group
@@ -10,5 +10,5 @@ block content
                 input.form-control(type="password" placeholder="password" name="password")
             .form-group
                 input.form-control(type="email" placeholder="email" name="email")
-            button.btn(type="submit") Register
+            button.btn.btn-primary.btn-lg.pull-right(type="submit") Register
         a(href="./login") Already registered? Click here to login!
