--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,13 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=1")
         block includes
     body
+        #header.container-fluid
+            .row
+                .page-header
+                    #title.col-xs-offset-1.col-sm-offset-4
+                        h1 tdd-blog 
+                            br.visible-xs-block
+                            small a blog written test-by-test
         .container-fluid
             block content
         script(src="/javascripts/jquery.js" type="text/javascript")
