--- a/views/usersLayout.jade
+++ b/views/usersLayout.jade
@@ -4,7 +4,7 @@ html
     head
         title= "TDD Blog - " + title
         link(href="/stylesheets/bootstrap.css" rel="stylesheet")
-        link(href="/stylesheets/layout.css" rel="stylesheet")
+        link(href="/stylesheets/userLayout.css" rel="stylesheet")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         block includes
     body
