--- a/views/index.jade
+++ b/views/index.jade
@@ -2,18 +2,21 @@ extends layout
 
 block content
     .row
-        .col-xs-offset-1
+        .col-xs-offset-1.col-sm-7
             case posts[0]
                 when undefined
                     p No posts yet!
                 default
                     each post in posts
                         - var date = post.date.toDateString();
-                        h3 
-                            a.postTitle(href="/#{post.permalink}") #{post.title}
-                            br
-                            small
-                                | written by 
-                                a.author(href="/users/#{post.author}") #{post.author} 
-                                | on #{date}
-                        p.lead #{post.body}
+                        - var body = post.body.substring(0, 1000);
+                        h2 
+                            a.postTitle(href="/posts/#{post.permalink}") #{post.title}
+                        p.metaInfo
+                            |      written by 
+                            a.author(href="/users/#{post.author}") #{post.author} 
+                            | on #{date}
+                        p.lead 
+                            | #{body}... 
+                            a.postLink(href="/posts/#{post.permalink}" title="See Full Post") >
+        include sidebar
