--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
             .row
                 .page-header
                     #title.col-xs-offset-1.col-sm-offset-4
-                        h1 tdd-blog 
+                        h1: a(href="/") tdd-blog 
                             br.visible-xs-block
                             small a blog written test-by-test
         .container-fluid
