--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -1,10 +1,9 @@
 .col-sm-offset-1.col-sm-3.hidden-xs
     .sidebar.col-sm-12
         h3 Popular Posts
-        - var popPosts = ["Awesome Clickbait","Outlandish Claim","Opposite of Accepted Truth"];
         ul.list-unstyled
-            each post in popPosts
-                li: a(href="#") #{post}
+            each post in popular
+                li: a(href="/posts/#{post.permalink}") #{post.title}
     .sidebar.col-sm-12
         h3 Recent Posts
         ul.list-unstyled
