--- a/views/newPost.jade
+++ b/views/newPost.jade
@@ -8,6 +8,8 @@ block content
                 input.form-control(type="text" required="true" placeholder="Post title" name="title")
             .form-group
                 textarea.form-control(required="true" placeholder="Post body" name="body" rows="10")
+            .form-group
+                input.form-control(type="text" placeholder="tags (comma separated)" name="tags")
             .checkbox
                 label
                     input(type="checkbox" name="draft") 
