--- a/views/blogPost.jade
+++ b/views/blogPost.jade
@@ -4,8 +4,7 @@ block content
     .row
         .col-xs-offset-1.col-sm-7
             - var date = post.date.toDateString();
-            h2 
-                a.postTitle(href="/#{post.permalink}") #{post.title}
+            h2= post.title
             p.metaInfo
                 |      written by 
                 a.author(href="/users/#{post.author}") #{post.author} 
@@ -13,4 +12,12 @@ block content
             p.lead 
                 | #{post.body}
                 a.postLink(href="/#{post.permalink}" title="See Full Post")
+            if post.tags
+                p.tags tags:
+                    each tag, i in post.tags
+                        if i === 0
+                            a.tagLink(href="/tags/#{tag}") #{tag}
+                        else
+                            | , 
+                            a.tagLink(href="/tags/#{tag}") #{tag}
         include sidebar
