--- a/public/stylesheets/userLayout.css
+++ b/public/stylesheets/userLayout.css
@@ -1,3 +1,12 @@
 .navbar {
     margin-bottom: 0;
+} 
+
+.nav a {
+    text-align: right;
+}
+
+.userMsg {
+    margin-top: 10%;
+    text-align: center;
 }
