--- a/views/register.jade
+++ b/views/register.jade
@@ -3,6 +3,7 @@ extends usersLayout
 block content
     .col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4
         h1= title
+        p.lead.text-warning #{errMsg}
         form(action="/users/register" method="POST")
             .form-group
                 input.form-control(type="text" placeholder="username" name="username")
